######################################################################
#
# CMakeLists.txt for efit tests
#
######################################################################

# TO DO: add test option that skips efund

add_subdirectory(efund)
add_subdirectory(efit01)
add_subdirectory(efit02)
add_subdirectory(efit02er)
add_subdirectory(rfile)
#add_subdirectory(kineticEFIT)
